# check_infosiga

./: .gitignore  CLAUDE.md  README.md  _targets.R  app.py  data_processing.py  main.R  pyproject.toml  requirements.txt  schemas.py  test.html  validation.py
_targets/meta/: meta
data/: municipios.json  municipios.rds
report/: pessoas_2025-06-03_16-22-09.html  pessoas_2025-06-03_17-41-44.html  pessoas_2025-06-04_14-55-38.html  veiculos_2025-06-03_17-40-32.html  veiculos_2025-06-03_17-41-22.html  veiculos_2025-06-03_17-58-27.html  veiculos_2025-06-03_18-03-51.html  veiculos_2025-06-03_18-06-02.html  veiculos_2025-06-04_14-55-03.html  veiculos_2025-06-04_14-58-22.html
