[project]
name = "check-infosiga"
version = "0.1.0"
description = "Validação automatizada da qualidade dos dados do Infosiga-SP"
requires-python = ">=3.13"
dependencies = [
    "shiny>=0.7.0",
    "pointblank>=0.12.0",
    "pandas>=2.0.0",
    "pyreadr>=0.5.0",
    "python-dateutil>=2.8.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.1",
]
